# django-components-preprocessor

./: .gitignore  LICENSE  README.md  pyproject.toml
django_components_preprocessor/: __init__.py  loader.py
example/: pyproject.toml
example/components/calendar/: calendar.html  calendar.py  script.js
example/core/: views.py
example/core/templates/core/: index.html
example/example/: settings.py  urls.py
