[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django_components_preprocessor"
authors = [{name = "Fabian Binz", email = "fabian.binz@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "django-components ~= 0.35",
]

[project.urls]
Home = "https://ich.binz.dev"