[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
# delete as soon as the django-countries installed from git is not needed anymore
allow-direct-references = true

[project]
description = ""
name = "backend"
version = "1.10.4"
dependencies = [
]

[project.optional-dependencies]
dev = [
  "black ~= 23.3.0",
  "mypy ~= 1.4.1",
  "pip-tools ~= 7.3.0",
  "ruff ~= 0.0.277",
  "werkzeug ~= 2.3.6",
]
django_extensions = ["pyparsing", "pydot"]

[tool.ruff]
src = ["backend"]
line-length = 120
unfixable = [
  # don't autofix unused variables and imports, since they
  # appear frequently during development
  "F401",
  "F841",
]
exclude = ["**migrations**"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.flake8]
exclude = ["__pycache__", ".venv"]
ignore = []
max-line-length = 120
per-file-ignores = ['__init__.py:F401']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "apps.config.settings"
filterwarnings = [
  "ignore:::django:0",         # ignore all warnings that come from django
  "ignore:::configurations:0", # ignore all warnings that come from django-configurations
]
python_files = "tests.py test_*.py *_tests.py"
testpaths = ["apps"]

[tool.mypy]
python_version = "3.10"
plugins = ["./apps/config/mypy_init.py", "pydantic.mypy"]

allow_redefinition = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
implicit_reexport = true

exclude = ["migrations", "settings"]
disable_error_code = "var-annotated"

[[tool.mypy.overrides]]
module = [
  "ai_django_core.*",
  "celery.*",
  "configurations.*",
  "dateutil.*",
  "glom.*",
  "hashids.*",
  "phonenumber_field.*",
  "pycountry.*",
  "solo.*",
  "storages.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "apps.config.settings"

[tool.djlint]
blank_line_after_tag = "endblock,extends,include,load"
blank_line_before_tag = "block"
close_void_tags = true
indent_size = 4
line_break_after_multiline_tag = true
max_blank_lines = 1
profile = "django"

[tool.coverage.run]
branch = true
omit = [
  "*/admin/*.py",
  "*/admin.py",
  "crispy_daisyui/*",
  "manage.py",
  "*/migrations/*.py",
  "__init__.py",
  "*/management/commands/*",
  "apps/config/**/*.py",
  "**/tests/**/test_*.py",
  # individual files
  "show_queries.py",
  "apps.py",
  "urls.py",
  "factories.py",
  "conftest.py",
  "fixtures.py",
]
